sending a signup verification email

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 PAYLOAD_SECRET=topsecretfordigitalpanda
 MONGODB_URL=mongodb+srv://dhirajkhapangiofficial:ESIfWHsVAgmqDCYd@cluster0.f44k8jx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+
+RESEND_API_KEY=re_FjSgL84s_KN5Y3MankTRbBfWqWXvEzXHV
+
+MAIL_ID=dkm1036@gmail.com
+MP=suxe ahtc inyi cabs
