--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-hook-form": "^7.51.2",
     "react-if": "^4.1.5",
     "sonner": "^1.4.41",
+    "swiper": "^11.1.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
