--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.51.2",
     "react-if": "^4.1.5",
     "sonner": "^1.4.41",
+    "stripe": "^14.24.0",
     "swiper": "^11.1.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
