add .env on gitignore

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
+PAYLOAD_SECRET=
+MONGODB_URL=
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
 
-# Any value works here, should be somewhat secure
-PAYLOAD_SECRET=
+RESEND_API_KEY=
 
-# Database - either MongoDB or Postgres work
-MONGODB_URL=
+MAIL_ID=
+MP=
 
-# Payments
 STRIPE_SECRET_KEY=
-STRIPE_WEBHOOK_SECRET=
+NEXT_PAYPAL_CLIENT_ID=
+NEXT_PAYPAL_ENVIRONMENT=
